// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup buttons should be displayed vertically 1`] = `
"<div class=\\"btn-group vertical \\"><button type=\\"button\\" class=\\"btn \\"><div class=\\"text \\">action1</div><style>
          .btn {
            box-sizing: border-box;
            display: inline-block;
            padding: 0 1.25rem;
            height: 2.8571rem;
            line-height: 2.8571rem;
            min-width: min-content;
            width: auto;
            border-radius: 2px;
            font-weight: bold;
            font-size: 1rem;
            user-select: none;
            outline: none;
            text-transform: capitalize;
            justify-content: center;
            text-align: center;
            white-space: nowrap;
            transition: background-color 200ms ease 0ms, box-shadow 200ms ease 0ms,
              border 200ms ease 0ms, color 200ms ease 0ms;
            position: relative;
            overflow: hidden;
            color: #444;
            background-color: #fdfdfe;
            border: 2px solid #ebeced;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            --zeit-ui-button-padding: 1.25rem;
            --zeit-ui-button-height: 2.8571rem;
            --zeit-ui-button-color: #444;
            --zeit-ui-button-bg: #fdfdfe;
          }

          .btn:hover {
            color: #444;
            --zeit-ui-button-color: #444;
            background-color: #fdfdfe;
            border-color: #aaafbb;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            transform: translate3d(0px, 0px, 0px);
          }

          .btn:active {
            color: #444;
            --zeit-ui-button-color: #444;
            background-color: #fdfdfe;
            border-color: #9b9eac;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            transform: translate3d(0px, 0px, 0px);
          }

          .btn :global(.text) {
            position: relative;
            z-index: 1;
            display: inline-flex;
            justify-content: center;
            align-items: center;
            text-align: center;
            line-height: inherit;
            top: -2px;
          }

          .btn :global(.text p),
          .btn :global(.text pre),
          .btn :global(.text div) {
            margin: 0;
          }
          .btn :global(.hidden) {
            visibility: hidden;
          }
        </style></button><button type=\\"button\\" class=\\"btn \\"><div class=\\"text \\">action2</div><style>
          .btn {
            box-sizing: border-box;
            display: inline-block;
            padding: 0 1.25rem;
            height: 2.8571rem;
            line-height: 2.8571rem;
            min-width: min-content;
            width: auto;
            border-radius: 2px;
            font-weight: bold;
            font-size: 1rem;
            user-select: none;
            outline: none;
            text-transform: capitalize;
            justify-content: center;
            text-align: center;
            white-space: nowrap;
            transition: background-color 200ms ease 0ms, box-shadow 200ms ease 0ms,
              border 200ms ease 0ms, color 200ms ease 0ms;
            position: relative;
            overflow: hidden;
            color: #444;
            background-color: #fdfdfe;
            border: 2px solid #ebeced;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            --zeit-ui-button-padding: 1.25rem;
            --zeit-ui-button-height: 2.8571rem;
            --zeit-ui-button-color: #444;
            --zeit-ui-button-bg: #fdfdfe;
          }

          .btn:hover {
            color: #444;
            --zeit-ui-button-color: #444;
            background-color: #fdfdfe;
            border-color: #aaafbb;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            transform: translate3d(0px, 0px, 0px);
          }

          .btn:active {
            color: #444;
            --zeit-ui-button-color: #444;
            background-color: #fdfdfe;
            border-color: #9b9eac;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            transform: translate3d(0px, 0px, 0px);
          }

          .btn :global(.text) {
            position: relative;
            z-index: 1;
            display: inline-flex;
            justify-content: center;
            align-items: center;
            text-align: center;
            line-height: inherit;
            top: -2px;
          }

          .btn :global(.text p),
          .btn :global(.text pre),
          .btn :global(.text div) {
            margin: 0;
          }
          .btn :global(.hidden) {
            visibility: hidden;
          }
        </style></button><style>
          .btn-group {
            display: inline-flex;
            border-radius: 4px;
            margin: 4pt;
            border: 1px solid #eaeaea;
            background-color: transparent;
            overflow: hidden;
            height: min-content;
          }

          .vertical {
            flex-direction: column;
          }

          .btn-group :global(.btn) {
            border: none;
          }

          .btn-group :global(.btn .text) {
            top: 0;
          }

          .horizontal :global(.btn:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 1px solid #eaeaea;
          }

          .horizontal :global(.btn:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .vertical :global(.btn:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 1px solid #eaeaea;
          }

          .vertical :global(.btn:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup props should be passed to each button 1`] = `
"<div class=\\"btn-group horizontal \\"><button type=\\"button\\" class=\\"btn \\"><div class=\\"text \\">action</div><style>
          .btn {
            box-sizing: border-box;
            display: inline-block;
            padding: 0 0.625rem;
            height: 1.5rem;
            line-height: 1.5rem;
            min-width: min-content;
            width: auto;
            border-radius: 2px;
            font-weight: bold;
            font-size: .75rem;
            user-select: none;
            outline: none;
            text-transform: capitalize;
            justify-content: center;
            text-align: center;
            white-space: nowrap;
            transition: background-color 200ms ease 0ms, box-shadow 200ms ease 0ms,
              border 200ms ease 0ms, color 200ms ease 0ms;
            position: relative;
            overflow: hidden;
            color: #444;
            background-color: #fdfdfe;
            border: 2px solid #ebeced;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            --zeit-ui-button-padding: 0.625rem;
            --zeit-ui-button-height: 1.5rem;
            --zeit-ui-button-color: #444;
            --zeit-ui-button-bg: #fdfdfe;
          }

          .btn:hover {
            color: #444;
            --zeit-ui-button-color: #444;
            background-color: #fdfdfe;
            border-color: #aaafbb;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            transform: translate3d(0px, 0px, 0px);
          }

          .btn:active {
            color: #444;
            --zeit-ui-button-color: #444;
            background-color: #fdfdfe;
            border-color: #9b9eac;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            transform: translate3d(0px, 0px, 0px);
          }

          .btn :global(.text) {
            position: relative;
            z-index: 1;
            display: inline-flex;
            justify-content: center;
            align-items: center;
            text-align: center;
            line-height: inherit;
            top: -2px;
          }

          .btn :global(.text p),
          .btn :global(.text pre),
          .btn :global(.text div) {
            margin: 0;
          }
          .btn :global(.hidden) {
            visibility: hidden;
          }
        </style></button><style>
          .btn-group {
            display: inline-flex;
            border-radius: 4px;
            margin: 4pt;
            border: 1px solid #fff;
            background-color: transparent;
            overflow: hidden;
            height: min-content;
          }

          .vertical {
            flex-direction: column;
          }

          .btn-group :global(.btn) {
            border: none;
          }

          .btn-group :global(.btn .text) {
            top: 0;
          }

          .horizontal :global(.btn:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 1px solid #fff;
          }

          .horizontal :global(.btn:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .vertical :global(.btn:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 1px solid #fff;
          }

          .vertical :global(.btn:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup props should be passed to each button 2`] = `
"<div class=\\"btn-group horizontal \\"><button type=\\"button\\" class=\\"btn \\"><div class=\\"text \\">action</div><style>
          .btn {
            box-sizing: border-box;
            display: inline-block;
            padding: 0 0.625rem;
            height: 1.5rem;
            line-height: 1.5rem;
            min-width: min-content;
            width: auto;
            border-radius: 2px;
            font-weight: bold;
            font-size: .75rem;
            user-select: none;
            outline: none;
            text-transform: capitalize;
            justify-content: center;
            text-align: center;
            white-space: nowrap;
            transition: background-color 200ms ease 0ms, box-shadow 200ms ease 0ms,
              border 200ms ease 0ms, color 200ms ease 0ms;
            position: relative;
            overflow: hidden;
            color: #444;
            background-color: #fdfdfe;
            border: 2px solid #ebeced;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            --zeit-ui-button-padding: 0.625rem;
            --zeit-ui-button-height: 1.5rem;
            --zeit-ui-button-color: #444;
            --zeit-ui-button-bg: #fdfdfe;
          }

          .btn:hover {
            color: #444;
            --zeit-ui-button-color: #444;
            background-color: #fdfdfe;
            border-color: #aaafbb;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            transform: translate3d(0px, 0px, 0px);
          }

          .btn:active {
            color: #444;
            --zeit-ui-button-color: #444;
            background-color: #fdfdfe;
            border-color: #9b9eac;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            transform: translate3d(0px, 0px, 0px);
          }

          .btn :global(.text) {
            position: relative;
            z-index: 1;
            display: inline-flex;
            justify-content: center;
            align-items: center;
            text-align: center;
            line-height: inherit;
            top: -2px;
          }

          .btn :global(.text p),
          .btn :global(.text pre),
          .btn :global(.text div) {
            margin: 0;
          }
          .btn :global(.hidden) {
            visibility: hidden;
          }
        </style></button><style>
          .btn-group {
            display: inline-flex;
            border-radius: 4px;
            margin: 4pt;
            border: 1px solid #58f17a;
            background-color: transparent;
            overflow: hidden;
            height: min-content;
          }

          .vertical {
            flex-direction: column;
          }

          .btn-group :global(.btn) {
            border: none;
          }

          .btn-group :global(.btn .text) {
            top: 0;
          }

          .horizontal :global(.btn:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 1px solid #58f17a;
          }

          .horizontal :global(.btn:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .vertical :global(.btn:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 1px solid #58f17a;
          }

          .vertical :global(.btn:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup should render correctly 1`] = `
"<div class=\\"btn-group horizontal \\"><button type=\\"button\\" class=\\"btn \\"><div class=\\"text \\">action</div><style>
          .btn {
            box-sizing: border-box;
            display: inline-block;
            padding: 0 1.25rem;
            height: 2.8571rem;
            line-height: 2.8571rem;
            min-width: min-content;
            width: auto;
            border-radius: 2px;
            font-weight: bold;
            font-size: 1rem;
            user-select: none;
            outline: none;
            text-transform: capitalize;
            justify-content: center;
            text-align: center;
            white-space: nowrap;
            transition: background-color 200ms ease 0ms, box-shadow 200ms ease 0ms,
              border 200ms ease 0ms, color 200ms ease 0ms;
            position: relative;
            overflow: hidden;
            color: #444;
            background-color: #fdfdfe;
            border: 2px solid #ebeced;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            --zeit-ui-button-padding: 1.25rem;
            --zeit-ui-button-height: 2.8571rem;
            --zeit-ui-button-color: #444;
            --zeit-ui-button-bg: #fdfdfe;
          }

          .btn:hover {
            color: #444;
            --zeit-ui-button-color: #444;
            background-color: #fdfdfe;
            border-color: #aaafbb;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            transform: translate3d(0px, 0px, 0px);
          }

          .btn:active {
            color: #444;
            --zeit-ui-button-color: #444;
            background-color: #fdfdfe;
            border-color: #9b9eac;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            transform: translate3d(0px, 0px, 0px);
          }

          .btn :global(.text) {
            position: relative;
            z-index: 1;
            display: inline-flex;
            justify-content: center;
            align-items: center;
            text-align: center;
            line-height: inherit;
            top: -2px;
          }

          .btn :global(.text p),
          .btn :global(.text pre),
          .btn :global(.text div) {
            margin: 0;
          }
          .btn :global(.hidden) {
            visibility: hidden;
          }
        </style></button><style>
          .btn-group {
            display: inline-flex;
            border-radius: 4px;
            margin: 4pt;
            border: 1px solid #eaeaea;
            background-color: transparent;
            overflow: hidden;
            height: min-content;
          }

          .vertical {
            flex-direction: column;
          }

          .btn-group :global(.btn) {
            border: none;
          }

          .btn-group :global(.btn .text) {
            top: 0;
          }

          .horizontal :global(.btn:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 1px solid #eaeaea;
          }

          .horizontal :global(.btn:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .vertical :global(.btn:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 1px solid #eaeaea;
          }

          .vertical :global(.btn:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;
